# NLP

./: .gitignore  pyproject.toml  requirements.txt
Lab1/: main.py
Lab1/Lab1_Tokenization/: main.py
Lab1/Lab2_Count_Vectorization/: main.py
Lab1/src/core/: interfaces.py
Lab1/src/preprocessing/: regex_tokenizer.py  simple_tokenizer.py
Lab2/: README.md  main.py
Lab2/results/: lab17_pipeline_output.txt
Lab2/spark_labs/results/: lab17_pipeline_output.txt
Lab2/src/core/: interfaces.py
Lab2/src/representations/: count_vectorizer.py
Lab3/: README.md
Lab3/results/: lab4_spark_word2vec_output.txt  lab4_test_output.txt  lab4_training_demo_output.txt  spark_vocab_simple.txt  word2vec_ewt.model
Lab3/src/representations/: word_embedder.py
Lab3/test/: lab4_embedding_training_demo.py  lab4_spark_word2vec_demo.py  lab4_test.py
Lab4/: README.md
Lab4/results/: lab5_spark_sentiment_advanced_results.txt  lab5_spark_sentiment_approach1_results.txt  lab5_spark_sentiment_results.txt  lab5_test_results.txt
Lab4/test/: lab5_spark_sentiment_analysis.py  lab5_spark_sentiment_analysis_advanced.py  lab5_spark_sentiment_analysis_approach1.py  lab5_test.py
Lab5/: README.md  intro_to_pytorch.ipynb
Lab5/part2/: Lab05_RNNs_Text_Classification_.ipynb  README.md
Lab5/part4/: README.md  lab5_rnn_ner.ipynb
Lab6/: Lab6_Intro_to_Transformers.ipynb  README.md
Lab7/: Lab7_Dependency_Parsing.ipynb  README.md
LabX/: README..md
Report/Lab5/: Report_Lab5_part1.md  Report_Lab5_part2.md  Report_Lab5_part4.md
Report/Lab6/: Report_Lab6.md
Report/Lab7/: Report_Lab7.md
(+7 files in other folders)
