[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pyspark==3.3.4",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
]
